---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<256, 4, x>>\n}\n"
---
----- SOURCE CODE

fn go(x) {
  <<256, 4, x>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../rakun.mjs";

function go(x) {
  return toBitArray([256, 4, x]);
}
